# moos-ivp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING.md  FIXES.txt  MOOS  MOOS-beta  README  README-GNULINUX.txt  README-LINUX.txt  README-OS-X.txt  README-WINDOWS.txt  README.md  README.txt  ReleaseNotes.txt  ReleaseNotesK.txt  TrunkUpdates.txt  build-check.sh  build-ivp.sh  build-moos-beta.sh  build-moos-speedy.sh  build-moos.sh  build-proj4.sh  build-utests.sh  build.sh  buildi.sh  configure-ivp.sh  moos-config.cmake
MOOS/Core/MOOSDB/: CMakeLists.txt  MOOSDB.cpp  MOOSDB.h  MOOSDBMain.cpp  resource.h
MOOS/Core/MOOSGenLib/: CMakeLists.txt  MOOSAssert.h  MOOSFileReader.cpp  MOOSFileReader.h  MOOSGenLib.h  MOOSGenLibGlobalHelper.cpp  MOOSGenLibGlobalHelper.h  MOOSLinuxSerialPort.cpp  MOOSLinuxSerialPort.h  MOOSLock.cpp  MOOSNTSerialPort.cpp  MOOSNTSerialPort.h  MOOSSerialPort.cpp  MOOSSerialPort.h  NTSerial.cpp  NTSerial.h  ProcessConfigReader.cpp  ProcessConfigReader.h  sources
MOOS/Core/MOOSLIB/: CMakeLists.txt  MOOSApp.cpp  MOOSApp.h  MOOSCommClient.cpp  MOOSCommClient.h  MOOSCommObject.h  MOOSCommPkt.cpp  MOOSCommPkt.h  MOOSCommServer.cpp  MOOSCommServer.h  MOOSException.cpp  MOOSInstrument.cpp  MOOSMsg.cpp  MOOSMsg.h  MOOSVariable.cpp  XPCException.h  XPCGetHostInfo.cpp  XPCGetProtocol.h  XPCSocket.cpp  XPCSocket.h  XPCTcpSocket.h
MOOS/Essentials/MOOSUtilityLib/: CMakeLists.txt  InterpBuffer.h  MOOSGeodesy.cpp  MOOSGeodesy.h  MOOSTerrain.h  MOOSThread.h  MOOSThreadedTimeJournal.h  MOOSTimeJournal.h  ScalarPID.h  TMaxPair.h  TMinPair.h  ThirdPartyRequest.h
MOOS/Essentials/pAntler/: AntlerMain.cpp  CMakeLists.txt  XPCException.h  XPCProcess.cpp  XPCProcess.h  XPCProcessAttrib.cpp  XPCProcessAttrib.h  resource.h
MOOS/Essentials/pMOOSBridge/: CMakeLists.txt  MOOSBridge.h  MOOSBridgeMain.cpp  MOOSCommunity.cpp  MOOSCommunity.h  resource.h
MOOS/Essentials/pScheduler/: CMakeLists.txt  MOOSScheduler.cpp  pSchedulerMain.cpp  resource.h
MOOS/NavigationAndControl/MOOSNavLib/: CMOOSNavLibGlobalHelper.cpp  CMakeLists.txt  LBLMaths.h  MOOSLinearLeastMedianFilter.cpp  MOOSLinearLeastMedianFilter.h  MOOSNavBBCMLEngine.cpp  MOOSNavBBCMLEngine.h  MOOSNavBase.cpp  MOOSNavBase.h  MOOSNavBeacon.cpp  MOOSNavBroker.cpp  MOOSNavBroker.h  MOOSNavEKFEngine.h  MOOSNavEngine.cpp  MOOSNavEngine.h  MOOSNavEntity.h  MOOSNavLSQEngine.h  MOOSNavLib.h  MOOSNavLibDefs.h  MOOSNavLibGlobalHelper.h  MOOSNavObsStore.cpp  MOOSNavObsStore.h  MOOSNavSensor.cpp  MOOSNavSensor.h  MOOSNavTopDownCalEngine.cpp  MOOSObservation.cpp  MOOSObservation.h  MOOSSensorChannel.cpp  MOOSSensorChannel.h
MOOS/NavigationAndControl/MOOSTaskLib/: CMakeLists.txt  ConstantDepthTask.cpp  ConstantDepthTask.h  ConstantHeadingTask.cpp  ConstantHeadingTask.h  DiveTask.cpp  DiveTask.h  EndMission.cpp  EndMission.h  GoToDepth.cpp  GoToDepth.h  GoToWayPoint.cpp  GoToWayPoint.h  HoldingPatternTask.cpp  HoldingPatternTask.h  LimitAltitude.cpp  LimitAltitude.h  LimitBox.cpp  LimitBox.h  LimitDepth.cpp  LimitDepth.h  MOOSBehaviour.cpp  MOOSBehaviour.h  MOOSTaskDefaults.h  MOOSTaskLib.h  MOOSTaskReader.cpp  MOOSTaskReader.h  OrbitTask.cpp  OrbitTask.h  OverallTimeOut.cpp  OverallTimeOut.h  PathAction.cpp  PathAction.h  PilotTask.cpp  PilotTask.h  SeabedTrack.cpp  SeabedTrack.h  SteerThenDriveXYPatternTask.cpp  SteerThenDriveXYPatternTask.h  SurveyTask.cpp  (+11 more)
MOOS/NavigationAndControl/iRemote/: CMakeLists.txt  MOOSRemote.cpp  MOOSRemote.h  iRemoteMain.cpp  resource.h
MOOS/NavigationAndControl/pHelm/: CMakeLists.txt  HelmApp.cpp  HelmApp.h  HelmMain.cpp  resource.h
MOOS/NavigationAndControl/pNav/: CMakeLists.txt  MOOSNavigator.cpp  MOOSNavigator.h  MOOSPriorityInput.cpp  MOOSPriorityInput.h  pNavMain.cpp  resource.h
ivp/src/: CMakeLists.txt  CTestConfig.cmake  MOOSConfig.cmake  Makefile  Makefile.cjc  README  README-IVP  README_IVP_FAF  TRUNKNOTES.txt  checklist.txt  highlights.txt  issues.txt  ivp-config.cmake  make_3rd_party_app.mk  make_app.mk  make_config.mk  make_lib.mk  makefile  modules-disto.txt  plusnet-link  release_notes.txt  todo.txt  uFldNotes.txt
ivp/src/3rd-party-abahr/: CMakeLists.txt  ExtraCMakeIncludeDirs.txt
ivp/src/3rd-party-ajshafer/: CMakeLists.txt  ExtraCMakeIncludeDirs.txt  create-subdir-cmake-files.sh
ivp/src/3rd-party-anrp/: CMakeLists.txt  ExtraCMakeIncludeDirs.txt  create-subdir-cmake-files.sh
ivp/src/3rd-party-arjuna/: create-subdir-cmake-files.sh
ivp/src/3rd-party-cockrell/: CMakeLists.txt  create-subdir-cmake-files.sh
ivp/src/3rd-party-eickstedt/: CMakeLists.txt  ExtraCMakeIncludeDirs.txt  create-subdir-cmake-files.sh
ivp/src/3rd-party-mikerb/: ExtraCMakeIncludeDirs.txt  create-subdir-cmake-files.sh
ivp/src/3rd-party-tes/: CMakeLists.txt  README  create-subdir-cmake-files.sh  create-subdir-cmake-files.sh~
ivp/src/MOOSBlink/: CMOOSBlink.cpp  CMakeLists.txt  makefile
ivp/src/MOOSDB/: MOOSDBMain.cpp  MOOSDBVar.cpp  MOOSDBVar.h  MOOSRegisterInfo.cpp  MOOSRegisterInfo.h  makefile
ivp/src/MOOSDump/: CMakeLists.txt  makefile
ivp/src/MOOSGenLib/: InterpBuffer.h  MOOSFileReader.h  MOOSGenLibGlobalHelper.cpp  MOOSGenLibGlobalHelper.h  MOOSGeodesy.cpp  MOOSGeodesy.h  MOOSLinuxSerialPort.h  MOOSLock.cpp  MOOSLock.h  MOOSMemoryMapped.h  MOOSSerialPort.cpp  MOOSTerrain.cpp  MOOSTerrain.h  MOOSThread.h  MOOSThreadedTimeJournal.h  MOOSTimeJournal.h  PitchZPID.cpp  PitchZPID.h  ProcessConfigReader.cpp  ScalarPID.cpp  ScalarPID.h  TMaxPair.h  TMinPair.h  ThirdPartyRequest.cpp  ThirdPartyRequest.h  VERSION  makefile
ivp/src/MOOSLIB/: MOOSApp.h  MOOSCommClient.cpp  MOOSCommClient.h  MOOSCommObject.cpp  MOOSCommPkt.cpp  MOOSCommPkt.h  MOOSCommServer.cpp  MOOSException.h  MOOSGlobalHelper.cpp  MOOSGlobalHelper.h  MOOSInstrument.h  MOOSLib.h  MOOSMsg.h  MOOSVariable.h  XPCEndian.h  XPCException.h  XPCGetHostInfo.h  XPCGetProtocol.cpp  XPCTcpSocket.cpp  XPCTcpSocket.h  makefile
ivp/src/MOOSRemote/: CMakeLists.txt  MOOSRemote.cpp  MOOSRemote.h  makefile
ivp/src/MOOSUtilityLib/: CMakeLists.txt  InterpBuffer.h  MOOSGeodesy.h  MOOSMemoryMapped.h  MOOSTerrain.cpp  MOOSThread.h  PitchZPID.cpp  makefile  (+4 more)
(+5940 files in other folders)
